--- a/ShoppingCart.Web/packages.config
+++ b/ShoppingCart.Web/packages.config
@@ -1,31 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="bootstrap" version="4.2.1" targetFramework="net47" />
   <package id="datatables.net.bootstrap" version="1.10.15.1" targetFramework="net461" />
   <package id="datatables.net.core" version="1.10.15.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
-  <package id="jQuery" version="1.12.4" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net47" />
   <package id="jQuery.DataTables.Net" version="1.10.5" targetFramework="net461" />
+  <package id="jquery.validate.unobtrusive.bootstrap" version="1.2.3" targetFramework="net47" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
-  <package id="Microsoft.Net.Compilers" version="2.7.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net47" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net47" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net47" />
+  <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
+  <package id="Microsoft.Owin" version="4.0.1" targetFramework="net47" />
+  <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net47" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net47" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="popper.js" version="1.14.0" targetFramework="net47" />
   <package id="RouteJs.Mvc5" version="2.2.0" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
-  <package id="WebHelpers.Mvc5" version="2.0.0" targetFramework="net461" />
+  <package id="WebHelpers.Mvc5" version="2.1.0" targetFramework="net47" />
 </packages>
