--- a/ShoppingCart.Web/Web.config
+++ b/ShoppingCart.Web/Web.config
@@ -95,6 +95,13 @@
       
       
     <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
+    <!--for glyphicons-halflings-regular.woff2 not found-->
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+    </staticContent>
   </system.webServer>
   <!--
     exposeAllRoutes: Sets whether to expose all routes to the site. 
