--- a/ShoppingCart.Web/Web.config
+++ b/ShoppingCart.Web/Web.config
@@ -24,7 +24,7 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <authentication mode="Forms">
       <forms name="__UserLoginCookie" loginUrl="/Account/Login" defaultUrl="/Account/Login" />
     </authentication>
@@ -119,7 +119,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OnlineShoppingStoreMVCUsingLinq-20160609041917.mdf;Initial Catalog=aspnet-OnlineShoppingStoreMVCUsingLinq-20160609041917;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ShoppingStoreEntities" connectionString="metadata=res://*/ShoppingCartDatabaseModel.csdl|res://*/ShoppingCartDatabaseModel.ssdl|res://*/ShoppingCartDatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=OnlineShoppingStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OnlineShoppingStoreMVCUsingLinq-20160609041917.mdf;Initial Catalog=aspnet-OnlineShoppingStoreMVCUsingLinq-20160609041917;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="data source=SQL5036.site4now.net;initial catalog=DB_A45DB7_Mallesh0445;User Id=DB_A45DB7_Mallesh0445_admin;Password=Mallesh@445;"  providerName="System.Data.SqlClient"/>
     <add name="ShoppingStoreEntities" connectionString="metadata=res://*/ShoppingCartDatabaseModel.csdl|res://*/ShoppingCartDatabaseModel.ssdl|res://*/ShoppingCartDatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5036.site4now.net;initial catalog=DB_A45DB7_Mallesh0445;User Id=DB_A45DB7_Mallesh0445_admin;Password=Mallesh@445;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
